# aips

./: .env.example  .gitignore  .railwayignore  MAYA_CORE_SPEC.md  MAYA_DEPLOYMENT_SCRIPTABLE.md  Makefile  PHASE2_MANUAL_QUICK_TEST.md  Procfile  README.md  TEST_RESULTS.txt  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  restart_runner.sh  ruff.toml
docs/: PHASE3_BREAKDOWN.html  PHASE3_BREAKDOWN.md
maya/: __init__.py  cli.py  config.py  logging.py  web.py
maya/companions/: __init__.py  commitments.py  genesis.py  singleton.py  templates.py
maya/conversation/: moment_analyzer.py  orchestrator.py  prompt_builder.py
maya/db/: models.py  session.py
maya/emotional/: __init__.py  constants.py  service.py
maya/llm/: service.py
maya/memory/: __init__.py  config.py  prompts.py  service.py  service_legacy.py.bak
maya/relationship/: __init__.py  service.py  transitions.py
maya/telegram/: __init__.py  client.py  service.py
scripts/: smoke_test.py
scripts/deploy/: asyncpg_url.py  enable_pgvector.py  provision.sh  provision_neon.py  provision_railway.sh  provision_upstash.py  teardown.py  with-railway-env.sh
tests/: conftest.py
tests/integration/: test_memory_chat.py  test_memory_scenarios.py
tests/phase2_runner/: manual_scenarios.py  runner.py  scenarios.py  server.py
tests/product_phase3/: REPORT.md  cases.py  results.json  run_suite.py
tests/simulator/: evaluate.py  persona_chat.py  personas.py  regression.py  run_simulation.py  test_behaviors.py  test_evaluate.py  test_persona_chat.py  test_regression.py  test_run_simulation.py
(+17 files in other folders)
