[project]
name = "maya-core"
version = "1.0.0"
description = "Maya Core — chat orchestrator + memory layer + Grok integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "litellm>=1.40",
    "mem0ai>=0.1.0",
    "typer>=0.12",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "python-multipart>=0.0.29",
    "websockets>=16.0",
    "psycopg[binary,pool]>=3.3.4",
    "httpx>=0.27",
    "redis>=5.0",
    "truststore>=0.10.4",
]

[project.scripts]
maya = "maya.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maya"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
